--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "gulp-sass": "^5.0.0",
     "gulp-uglify": "^3.0.2",
     "sass": "^1.44.0"
+  },
+  "devDependencies": {
+    "netlify-cli": "^11.8.3"
   }
 }
